fix spacing, use colocatedType

--- a/src/app/map/controls/controls.component.scss
+++ b/src/app/map/controls/controls.component.scss
@@ -48,6 +48,8 @@
 }
 
 #openChannelsDialog{
+  max-width: 250px;
+  overflow: auto;
   border-radius: 2px;
   border: solid 1px $border;
   padding: 10px;
